Added showcase and newsletter sections to HTML.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>William's Web Design</title>
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
             <div id="branding">
@@ -21,11 +22,32 @@
                 <ul>
                     <li id="current">
                         <a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <!-- Showcase Section -->
+    <section id="showcase">
+        <div class="container">
+            <h1>Quality Web Design at Reasonable Prices</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe harum ratione recusandae eaque eos quod nostrum aut quos nemo, laudantium exercitationem debitis aperiam quaerat quae provident quam id aliquid. Ducimus?</p>
+        </div>
+    </section>
+
+    <!-- Newsletter Section -->
+    <section id="newsletter">
+        <div class="container">
+            <h1>Subscribe To Our Newsletter</h1>
+            <form>
+                <input type="email" placeholder="Enter Email..." title="Subscribe">
+                <button class="btn-1">Subscribe</button>
+            </form>
+        </div>
+    </section>
+
+    
 </body>
 </html>
