Styled the newsletters and boxes in CSS. Changed some Lorem in HTML.

--- a/index.html
+++ b/index.html
@@ -59,12 +59,13 @@
             <div class="box">
                 <i class="fab fa-css3-alt"></i>
                 <h3>CSS3 Styling</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, voluptates.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, distinctio?                    
+                </p>
             </div>
             <div class="box">
                 <i class="fab fa-js"></i>
                 <h3>JavaScript Functionality</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, voluptates.</p>
+                <p>Lorem ipsum dolor amet consectetur adipisicing elit. Distinctio, at!</p>
             </div>
         </div>
     </section>
